--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "knex": "^0.21.5",
     "morgan": "^1.10.0",
     "pg": "^7.18.2",
+    "sib-api-v3-sdk": "^8.2.0",
     "winston": "^3.3.3",
     "xss": "^1.0.8"
   },
